--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   "Couchbase" : {
     "ConnectionString": "couchbase://127.0.0.1" ,
     "UseSsl": false,
-    "UserName": "<Couchbase userid>",
-    "Password": "<Couchbase password>"
+    "UserName": "admin",
+    "Password": "password"
   }
 }
